initial spacing fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,15 +7,17 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* Commenting this out for now to "force" the background to be white for development purposes */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: "Times New Roman", Georgia, serif; /*Using this as the default font style instead, as it mirrors Latex more*/
 }
